--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.23",
     "@hookform/resolvers": "^3.9.1",
+    "@instantdb/react": "^0.20.12",
     "@orpc/client": "latest",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "latest",
